--- a/src/assets/css/pages/extra_pages.css
+++ b/src/assets/css/pages/extra_pages.css
@@ -74,7 +74,7 @@
 .login100-form {
   width: 453px;
   display: block;
-  background-color: #f5f5f5;
+  background-color: #fff;
   padding: 34px 55px;
   margin: 30px;
   border-radius: 20px; }
