--- a/src/app/task/task/task.component.html
+++ b/src/app/task/task/task.component.html
@@ -27,7 +27,7 @@
         <div class="card">
           <div class="boxs mail_listing">
             <div class="inbox-center table-responsive">
-              <table class="table table-hover">
+              <table *ngIf="!isTaskDataSupplierDetails" class="table table-hover">
                 <thead>
                   <tr>
                     <!-- <th class="text-center">
@@ -64,7 +64,7 @@
                 </thead>
                 <thead style="background-color: #4181a9;color: #fff;">
                   <th class="text-left">Queue</th>
-                  <th class="text-left">{{selectedTaskItem.appDefinitionKey === 'caseApp' ? "Case Id" : "Work unit Id"}}</th>
+                  <th class="text-left">{{selectedTaskItem.appDefinitionKey === 'caseApp' ? "Case Id" : (selectedTaskItem.appDefinitionKey === 'suppRegApproval') ? 'Supplier Details' : "Work unit Id"}}</th>
                   <th class="text-left">Assign</th>
                   <th class="text-left">Priority</th>
                   <th class="text-right">Date</th>
@@ -93,10 +93,77 @@
                   </tr>
                 </tbody>
               </table>
+
+              <table *ngIf="isTaskDataSupplierDetails" class="table table-hover">
+                <thead>
+                  <tr>
+                    <th [attr.colspan]="!item?.assignee?.id ? '6' : '6'">
+                      <div class="inbox-header">
+                        <div class="mail-option no-pad-left">
+                          <div class="row col-md-12 email-btn-group">
+                              <div class="col-5 col-md-5 s12">
+                                <input type="text" class="form-control" (input)="searchText($event)" placeholder="Search by id">
+                              </div>
+                              <div class="col-4 col-md-4 s12">
+                                <select (change)="selectedOrder($event)">
+                                  <option value="created-desc" selected>Newest first</option>
+                                  <option value="created-asc">Oldest first</option>
+                                  <option value="due-desc">Due last</option>
+                                  <option value="due-asc">Due first</option>
+                                </select>
+                              </div>
+                              <div class="col-3 col-md-3 text-right switch switch-section">
+                                <label>Open
+                                  <input type="checkbox" (change)="changeStatus($event)">
+                                  <span class="lever"></span>Complete</label>
+                              </div>
+                          </div>
+                        </div>
+                      </div>
+                    </th>
+                  </tr>
+                </thead>
+                <thead style="background-color: #4181a9;color: #fff;">
+                  <th class="text-left">Req ID</th>
+                  <th class="text-left">Supplier Code</th>
+                  <th class="text-left">Supplier Name</th>
+                  <th class="text-left">Registration Type</th>
+                  <th class="text-left">Registration No</th>
+                  <th class="text-left">Status</th>
+                </thead>
+
+                <tbody>
+                  <tr class="unread" *ngFor="let item of supplierDetails">
+                    <td class="text-left"> {{item.reqId}} </td>
+                    <td class="text-left"><a routerLink="/task/{{accountId}}/{{item.supplierCode}}" > {{item.supplierCode}} </a> </td>
+                    <td class="hidden-xs"> {{item.details?.supplierCompName || '-N/A-'}} </td>
+                    <td class="hidden-xs"> {{item.details?.registrationType || '-N/A-'}} </td>
+                    <td class="hidden-xs"> {{item.details?.registrationNo || '-N/A-'}} </td>
+                    <td class="color-orange"> {{item.status}} </td>
+                    <!-- <td class=""><a *ngIf="item?.workId" routerLink="/task/{{accountId}}/{{item.id}}">{{item.workId}}</a> <span *ngIf="!item?.workId">-N/A-</span></td>
+                    <td class="max-texts">
+                      <a *ngIf="item?.assignee?.fullName" routerLink="/task/{{accountId}}/{{item.id}}">
+                        <span class="label l-bg-purple shadow-style m-r-10"> {{item?.assignee?.fullName}}</span>
+                      </a>
+                      <span *ngIf="!item?.assignee?.fullName" class="label l-bg-purple shadow-style m-r-10"> {{'-N/A-'}}</span>
+                    </td>
+                    <td class="hidden-xs">
+                      <div class="priority"><i class="material-icons">low_priority</i>
+                      {{item.priority}}</div>
+                    </td>
+                    <td class="text-right color-orange">{{item?.created | date: 'MMM d, y h:mm:ss a' }} </td>
+                    <td class="text-center"> <button type="button"
+                      class="btn btn-info m-r-10 waves-effect"  *ngIf="!item?.assignee?.id" (click)="submitClaim(item?.id)">Claim</button> 
+                      <span *ngIf="item?.assignee?.id"> -N/A- </span>
+                    </td> -->
+                  </tr>
+                </tbody>
+              </table>
+
             </div>
             <div class="row">
               <div class="col-sm-7 ">
-                <p class="p-15">Showing {{userTaskList?.data?.length}} of {{userQueueList.length}}</p>
+                <p class="p-15">Showing {{supplierDetails?.length}} of {{supplierDetails.length}}</p>
               </div>
             </div>
           </div>
