--- a/src/app/task/tasksingle/tasksingle.component.scss
+++ b/src/app/task/tasksingle/tasksingle.component.scss
@@ -14,6 +14,10 @@
   display: flex;
   justify-content: space-between;
 }
+.bank-details  li {
+  width:  25%;
+  padding-bottom: 10px;
+}
 .strong {
 	font-weight:600;
 }
