--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,14 @@
   i {
     margin-right: 5px;
   }
+  &a {
+    font-size: 12px !important
+  }
   
+}
+
+a.task-section {
+  font-size: 12px !important;
 }
 
 #leftsidebar a.menuListIcon.active {
@@ -35,4 +42,16 @@
 
 .nav  {
   position: relative;
+}
+
+ul.nav.navbar-nav.navbar-pull::-webkit-scrollbar {
+  display: none;
+  
+}
+ul.nav.navbar-nav.navbar-pull {
+  width: 64%;
+  overflow-x: scroll;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
